--- a/main.tex
+++ b/main.tex
@@ -20,10 +20,11 @@
 \usepackage[T1]{fontenc}
 \usepackage{amsfonts, amsmath, amssymb}
 \usepackage{multirow}
+\usepackage[brazilian,abnt-emphasize=bf,abnt-etal-list=0,abnt-etal-text=it]{abntex2cite}
 
 %------------------------------------------------
 % Primeiro Slide
-\title[SIMOT]{Titulo}
+\title[SIMOT]{Título}
 
 \author{Nome do autor}
 
@@ -46,22 +47,19 @@ PROGRAMA DE PÓS-GRADUAÇÃO EM MODELAGEM E OTIMIZAÇÃO \\
 %------------------------------------------------
 
 \begin{frame}
-\frametitle{Contextualização}
+\frametitle{Introdução}
 
-\begin{block}{Novatos: 1º ou 2º Semestre}
+\begin{block}{Discentes: 1º ou 2º Semestre}
     \begin{itemize}
-        \item Fazer uma contextualização sobre o tema escolhido;
-        \begin{itemize}
-            \item Caso não tenha, descrever possíveis temas a serem realizados.
-        \end{itemize}
-        \item Motivação sobre o tema escolhido ou que ainda será escolhido.
+        \item Fazer uma contextualização. Caso o tema ainda não esteja definido, descrever sobre as atividades já realizadas durante o período do mestrado e sobre possíveis temas que podem ser escolhidos \cite{teste};
+        \item Descrever os objetivos. Caso o tema ainda não esteja definido, descrever sobre as motivações em relação aos temas mencionados \cite{teste}.
     \end{itemize}
 \end{block}
 
-\begin{block}{Veteranos: 3º ou 4º Semestre}
+\begin{block}{Discentes: 3º ou 4º Semestre}
     \begin{itemize}
-        \item Contextualização sobre o tema escolhido;
-        \item Motivação sobre o tema escolhido.
+        \item Fazer uma contextualização \cite{teste};
+        \item Descrever os objetivos \cite{teste}.
     \end{itemize}
 \end{block}
 
@@ -71,21 +69,21 @@ PROGRAMA DE PÓS-GRADUAÇÃO EM MODELAGEM E OTIMIZAÇÃO \\
 \begin{frame}
 \frametitle{Metodologia}
 
-\begin{block}{Novatos: 1º ou 2º Semestre}
+\begin{block}{Discentes: 1º ou 2º Semestre}
     \begin{itemize}
-        \item Descrever os passos que já foram tomados;
+        \item Descrever os passos que já foram tomados \cite{teste};
     \end{itemize}
 \end{block}
 
-\begin{block}{Veteranos: 3º ou 4º Semestre}
+\begin{block}{Discentes: 3º ou 4º Semestre}
     \begin{itemize}
-        \item Descrever os passos que já foram tomados;
-        \item Descrever sobre a aquisição dos dados;
+        \item Descrever os passos que já foram tomados \cite{teste};
+        \item Descrever sobre a aquisição dos dados \cite{teste};
         \begin{itemize}
             \item Onde foram obtidos?
             \item Como foram obtidos?
         \end{itemize}
-        \item Descrever sobre as técnicas que serão utilizadas;
+        \item Descrever sobre as técnicas que serão utilizadas \cite{teste};
         \begin{itemize}
             \item Quais serão utilizadas?
             \item Como serão utilizadas?
@@ -99,20 +97,20 @@ PROGRAMA DE PÓS-GRADUAÇÃO EM MODELAGEM E OTIMIZAÇÃO \\
 \begin{frame}
 \frametitle{Resultados}
 
-\begin{block}{Novatos: 1º ou 2º Semestre}
+\begin{block}{Discentes: 1º ou 2º Semestre}
     \begin{itemize}
-        \item Apresentação de resultados não é obrigatória; 
-        \item Caso não tenha resultados parciais, apresente o cronograma de atividades.
+        \item Apresentação de resultados não é obrigatória \cite{teste};
+        \item Caso não tenha resultados parciais, apresente o cronograma de atividades \cite{teste}.
         \begin{itemize}
-            \item Neste caso, não é necessário a existência dos slides "Resultados" e "Considerações finais";
-            \item Delete estes dois e crie uma slide intitulado "Cronograma de atividades".
+            \item Neste caso, não é necessário a existência dos slides "Resultados" e "Considerações finais" \cite{teste};
+            \item Delete estes dois e crie um slide intitulado "Cronograma de atividades" \cite{teste}.
         \end{itemize}
     \end{itemize}
 \end{block}
 
-\begin{block}{Veteranos: 3º ou 4º Semestre}
+\begin{block}{Discentes: 3º ou 4º Semestre}
     \begin{itemize}
-        \item Esta etapa de apresentação dos resultados é obrigatória, mesmo que sejam resultados parciais;
+        \item Esta etapa de apresentação dos resultados é obrigatória, mesmo que sejam resultados parciais \cite{teste};
     \end{itemize}
 \end{block}
 
@@ -122,20 +120,24 @@ PROGRAMA DE PÓS-GRADUAÇÃO EM MODELAGEM E OTIMIZAÇÃO \\
 \begin{frame}
 \frametitle{Considerações finais}
 
-\begin{block}{Novatos: 1º ou 2º Semestre}
+\begin{block}{Discentes: 1º ou 2º Semestre}
     \begin{itemize}
-        \item Caso não tenha resultados, este slide pode ser ignorado.
+        \item Caso não tenha resultados, este slide pode ser ignorado \cite{teste}.
     \end{itemize}
 \end{block}
 
-\begin{block}{Veteranos: 3º ou 4º Semestre}
+\begin{block}{Discentes: 3º ou 4º Semestre}
     \begin{itemize}
-        \item Descrever o que foi observado nos resultados e o que falta a ser realizado;
-        \item Apresentar o cronograma de atividades.
+        \item Descrever o que foi observado nos resultados e o que falta a ser realizado \cite{teste};
+        \item Apresentar o cronograma de atividades \cite{teste}.
     \end{itemize}
 \end{block}
 
 \end{frame}
 %------------------------------------------------
+
+\begin{frame}[allowframebreaks]{Referências}
+	\bibliography{referencias}
+\end{frame}
 
 \end{document}
