--- a/main.tex
+++ b/main.tex
@@ -49,17 +49,17 @@ PROGRAMA DE PÓS-GRADUAÇÃO EM MODELAGEM E OTIMIZAÇÃO \\
 \begin{frame}
 \frametitle{Introdução}
 
-\begin{block}{Discentes: 1º ou 2º Semestre}
+\begin{block}{Discentes: 1º ou 2º Semestre \cite{teste}}
     \begin{itemize}
-        \item Fazer uma contextualização. Caso o tema ainda não esteja definido, descrever sobre as atividades já realizadas durante o período do mestrado e sobre possíveis temas que podem ser escolhidos \cite{teste};
-        \item Descrever os objetivos. Caso o tema ainda não esteja definido, descrever sobre as motivações em relação aos temas mencionados \cite{teste}.
+        \item Fazer uma contextualização. Caso o tema ainda não esteja definido, descrever sobre as atividades já realizadas durante o período do mestrado e sobre possíveis temas que podem ser escolhidos;
+        \item Descrever os objetivos. Caso o tema ainda não esteja definido, descrever sobre as motivações em relação aos temas mencionados.
     \end{itemize}
 \end{block}
 
-\begin{block}{Discentes: 3º ou 4º Semestre}
+\begin{block}{Discentes: 3º ou 4º Semestre \cite{teste}}
     \begin{itemize}
-        \item Fazer uma contextualização \cite{teste};
-        \item Descrever os objetivos \cite{teste}.
+        \item Fazer uma contextualização;
+        \item Descrever os objetivos.
     \end{itemize}
 \end{block}
 
@@ -69,24 +69,18 @@ PROGRAMA DE PÓS-GRADUAÇÃO EM MODELAGEM E OTIMIZAÇÃO \\
 \begin{frame}
 \frametitle{Metodologia}
 
-\begin{block}{Discentes: 1º ou 2º Semestre}
+\begin{block}{Discentes: 1º ou 2º Semestre \cite{teste}}
     \begin{itemize}
-        \item Descrever os passos que já foram tomados \cite{teste};
+        \item Descrever os passos que já foram tomados;
     \end{itemize}
 \end{block}
 
-\begin{block}{Discentes: 3º ou 4º Semestre}
+\begin{block}{Discentes: 3º ou 4º Semestre \cite{teste}}
     \begin{itemize}
-        \item Descrever os passos que já foram tomados \cite{teste};
-        \item Descrever sobre a aquisição dos dados \cite{teste};
+        \item Descrever sobre as técnicas que serão utilizadas;
         \begin{itemize}
-            \item Onde foram obtidos?
-            \item Como foram obtidos?
-        \end{itemize}
-        \item Descrever sobre as técnicas que serão utilizadas \cite{teste};
-        \begin{itemize}
-            \item Quais serão utilizadas?
-            \item Como serão utilizadas?
+            \item Quais foram utilizadas?
+            \item Como foram utilizadas?
         \end{itemize}
     \end{itemize}
 \end{block}
@@ -97,20 +91,20 @@ PROGRAMA DE PÓS-GRADUAÇÃO EM MODELAGEM E OTIMIZAÇÃO \\
 \begin{frame}
 \frametitle{Resultados}
 
-\begin{block}{Discentes: 1º ou 2º Semestre}
+\begin{block}{Discentes: 1º ou 2º Semestre \cite{teste}}
     \begin{itemize}
-        \item Apresentação de resultados não é obrigatória \cite{teste};
-        \item Caso não tenha resultados parciais, apresente o cronograma de atividades \cite{teste}.
+        \item Apresentação de resultados não é obrigatória;
+        \item Apresente o cronograma de atividades.
         \begin{itemize}
-            \item Neste caso, não é necessário a existência dos slides "Resultados" e "Considerações finais" \cite{teste};
-            \item Delete estes dois e crie um slide intitulado "Cronograma de atividades" \cite{teste}.
+            \item Neste caso, não é necessário a existência dos slides "Resultados" e "Considerações finais";
+            \item Delete estes dois e crie um slide intitulado "Cronograma de atividades".
         \end{itemize}
     \end{itemize}
 \end{block}
 
-\begin{block}{Discentes: 3º ou 4º Semestre}
+\begin{block}{Discentes: 3º ou 4º Semestre \cite{teste}}
     \begin{itemize}
-        \item Esta etapa de apresentação dos resultados é obrigatória, mesmo que sejam resultados parciais \cite{teste};
+        \item Esta etapa de apresentação dos resultados é obrigatória, mesmo que sejam resultados parciais;
     \end{itemize}
 \end{block}
 
@@ -120,16 +114,16 @@ PROGRAMA DE PÓS-GRADUAÇÃO EM MODELAGEM E OTIMIZAÇÃO \\
 \begin{frame}
 \frametitle{Considerações finais}
 
-\begin{block}{Discentes: 1º ou 2º Semestre}
+\begin{block}{Discentes: 1º ou 2º Semestre \cite{teste}}
     \begin{itemize}
-        \item Caso não tenha resultados, este slide pode ser ignorado \cite{teste}.
+        \item Caso não tenha resultados, este slide pode ser ignorado.
     \end{itemize}
 \end{block}
 
-\begin{block}{Discentes: 3º ou 4º Semestre}
+\begin{block}{Discentes: 3º ou 4º Semestre \cite{teste}}
     \begin{itemize}
-        \item Descrever o que foi observado nos resultados e o que falta a ser realizado \cite{teste};
-        \item Apresentar o cronograma de atividades \cite{teste}.
+        \item Descrever o que foi observado nos resultados e o que falta a ser realizado;
+        \item Apresentar o cronograma de atividades.
     \end{itemize}
 \end{block}
 
